# rust-axum-rest-api

./: Cargo.toml  README.md  docker-compose.yml  justfile  rustfmt.toml
.sqlx/: query-09d8e28f1baf91f1bd48d771b395084071d3e7e4e7f1cca2bb518785f803feb0.json  query-107c4cb373a28a9930ca2813b14d157e4f75d5c78c9598b05c9c17614aa9ad91.json  query-40ccc2e86a2a7d8a5faca6e4009e20f89c43abe10923506926e79c5ef2eb3cde.json  query-4d4e25d4c4729723c64a6117c348dead580783bcb4cd615c8c0411c301492b32.json  query-4f17c842c8407460631eca641dd51a5700463ba3d51a440c4fdaef2b9b9a87fe.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-63171d2ca56e17c4bae6f05ba5953f32b19e0fba015f0bf254d4f6b5569f12fc.json  query-74bf845a65e1ac62f25876eaebf7f0ecea4214222545d7fed5d93ed830bdd9d7.json  query-77f2e95a51db115ebe0da156fbc0ec51b6b40bdabb093acb14c2af3c5f3a9e4b.json  query-8076a8ff497066358aed1670424d0dbce960d9130b66423b1e297294863818b6.json  query-a145ae855aa5d54cf84a7fe10ef64eb271f487748e694e2069a9a90ac0057620.json  query-adbd858a6aa2e6176c35ac1509d236d0e05ad876109ab4689cf157184f8f23fa.json  query-b6019471ff1989ef2f0658b0b34e683fdc706751e2bb69043544c9a4d08b5ba0.json  query-bd3de539031cd91eedcfebd4b2bd45febb4fa30759c16a03e33f17ef6d48056a.json  query-c9925708c793670fbf51b95672c316147bcb4f8fbbb0a349d242a43880bd6741.json  query-ca64f9b0d6ab4e72edf34a7e5edf095cbb3bc67afad6bba76e2042136c2d7e7d.json  query-d124fb052211c7ca8ab869e1fe5903bf5437b51326d2de5a2b234c610e33e556.json
examples/: generate_token.rs  seed_posts.rs  seed_users.rs
seeds/: 01_users.sql  02_posts.sql
(+22 files in other folders)
